# ZOM

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  codecov.yml
products/zomlang/compiler/: CMakeLists.txt
products/zomlang/compiler/ast/: CAST_USAGE.md  CMakeLists.txt  ast-nodes.def  ast.cc  ast.h  cast.h  classof.cc  classof.h  dumper.cc  dumper.h  expression.cc  expression.h  factory.cc  factory.h  kinds.h  module.cc  module.h  operator.cc  operator.h  serializer.cc  serializer.h  statement.cc  statement.h  type.cc  type.h  utilities.cc  utilities.h  visitor.h
products/zomlang/compiler/basic/: CMakeLists.txt  compiler-opts.h  frontend.cc  frontend.h  io-utils.cc  io-utils.h  string-escape.cc  string-escape.h  string-pool.cc  string-pool.h  task-queue.cc  task-queue.h  thread-pool.cc  thread-pool.h  zomlang-opts.h
products/zomlang/compiler/binder/: CMakeLists.txt  binder.cc  binder.h  utilities.cc  utilities.h
products/zomlang/compiler/checker/: CMakeLists.txt  checker.cc  checker.h  symbol-table.h
products/zomlang/compiler/diagnostics/: CMakeLists.txt  consoling-diagnostic-consumer.cc  consoling-diagnostic-consumer.h  diagnostic-consumer.cc  diagnostic-consumer.h  diagnostic-engine.cc  diagnostic-engine.h  diagnostic-ids.h  diagnostic-info.h  diagnostic-state.cc  diagnostic-state.h  diagnostic.cc  diagnostic.h  diagnostics-common.def  diagnostics-parse.def  diagnostics-sema.def  diagnostics.def  in-flight-diagnostic.cc  in-flight-diagnostic.h
products/zomlang/compiler/driver/: driver.cc  driver.h
products/zomlang/compiler/lexer/: CMakeLists.txt  bigint.h  lexer.cc  lexer.h  token.cc  token.h  unicode-data.cc  unicode-data.h  utils.cc  utils.h
products/zomlang/compiler/parser/: CMakeLists.txt  parser.cc  parser.h
products/zomlang/compiler/source/: CMakeLists.txt  location.cc  location.h  manager.cc  manager.h  module.cc  module.h
products/zomlang/compiler/symbol/: CMakeLists.txt  namespace-symbol.h  package-symbol.h  scope.cc  scope.h  symbol-denotation.cc  symbol-denotation.h  symbol-flags.h  symbol-id.h  symbol-table.cc  symbol-table.h  symbol.cc  symbol.h  type-symbol.cc  type-symbol.h  value-symbol.cc  value-symbol.h
products/zomlang/compiler/trace/: CMakeLists.txt  README.md  trace-config.cc  trace-config.h  trace.cc  trace.h
products/zomlang/compiler/typecheck/: symbol-table.h  typechecker.cc  typechecker.h
products/zomlang/compiler/zis/: zis.h
products/zomlang/tests/: CMakeLists.txt  README.md  lit.cfg.py
products/zomlang/tests/language/: CMakeLists.txt
products/zomlang/tests/language/classes/: CMakeLists.txt  class-accessors-init-deinit.zom  class-declaration.zom  class-inheritance.zom  class-member-tags.zom  modifiers.zom
products/zomlang/tests/language/declarations/: CMakeLists.txt
products/zomlang/tests/language/declarations/aliases/: CMakeLists.txt  alias-declarations.zom
products/zomlang/tests/language/declarations/enums/: CMakeLists.txt  enum-declarations.zom
products/zomlang/tests/language/declarations/errors/: CMakeLists.txt  error-declarations.zom
products/zomlang/tests/language/declarations/functions/: CMakeLists.txt
products/zomlang/tests/language/declarations/structs/: CMakeLists.txt  struct-declarations.zom
products/zomlang/tests/language/declarations/variables/: destructuring.zom  variable-declarations.zom
products/zomlang/tests/language/errors/: CMakeLists.txt  interface-invalid-braces.zom  interface-invalid-member-class.zom  interface-invalid-method-type.zom  interface-method-extra-initializer.zom  interface-method-missing-parens.zom  interface-missing-body-close-brace.zom  interface-missing-body-open-brace.zom  interface-property-missing-name.zom  interface.zom
products/zomlang/tests/language/expressions/: CMakeLists.txt  arrays-and-objects.zom  assignment-operators.zom  binary-operators.zom  calls-members-new-optional.zom  error-handling-operators.zom  strict-and-error-default.zom  template-literals.zom  unary-and-cast.zom
products/zomlang/tests/language/expressions/literals/: bigint-normalization.zom  bigint.zom  character-literals.zom  integer-formats.zom  legacy-octal.zom  numeric-literals.zom  string-escapes.zom  string-literals.zom
products/zomlang/tests/language/interfaces/: CMakeLists.txt  interface-declaration.zom  interface-inheritance.zom  interface-member-tags.zom  interface-modifiers-optional.zom
products/zomlang/tests/language/lexical/: CMakeLists.txt
products/zomlang/tests/language/lexical/identifiers/: reserved-words.zom
products/zomlang/tests/language/modules/: CMakeLists.txt  import-export.zom
products/zomlang/tests/language/semantic/: CMakeLists.txt
products/zomlang/tests/language/statements/: CMakeLists.txt  basic-statements.zom  break-continue.zom  control-flow.zom  jumps.zom  loops.zom  match.zom  test_hang.zom  test_match.zom
products/zomlang/tests/language/statements/control-flow/: conditionals.zom  loops.zom
products/zomlang/tests/language/types/: CMakeLists.txt  function-type-binding-patterns.zom  function-types.zom  object-types.zom  tuple-types.zom  type-forms-error.zom  type-forms.zom  type-query.zom  union-complex.zom  union-intersection.zom  union-precedence.zom  union-trailing-bar.zom
products/zomlang/tests/performance/: CMakeLists.txt
products/zomlang/tests/regression/: CMakeLists.txt
products/zomlang/tests/tools/: filecheck.py  regen-lit.py
products/zomlang/tests/unittests/compiler/: CMakeLists.txt
products/zomlang/tests/unittests/compiler/ast/: CMakeLists.txt  ast-test.cc  cast-test.cc  dumper-test.cc  expression-test.cc  factory-test.cc  module-test.cc  operator-test.cc  statement-test.cc  type-test.cc  utilities-test.cc
products/zomlang/tests/unittests/compiler/basic/: frontend-test.cc  io-utils-test.cc  string-pool-test.cc  thread-pool-test.cc
products/zomlang/tests/unittests/compiler/binder/: CMakeLists.txt  binder-test.cc
products/zomlang/tests/unittests/compiler/checker/: CMakeLists.txt  checker-test.cc  symbol-table-test.cc
products/zomlang/tests/unittests/compiler/diagnostics/: diagnostic-state-test.cc  (+3 more)
(+177 files in other folders)
